--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="trip_card">
       <!-- Immagine -->
       <div class="img_container">
-        <img src="img/facciata-hotel-by-night.jpg" alt="Immagine Hotel" />
+        <img src="img/01.jpg" alt="Immagine Hotel" />
       </div>
       <div class="card_container">
         <!-- Titolo -->
@@ -43,8 +43,10 @@
             </div>
             <!-- Lista servizi opzionali -->
             <ul class="info_optional_ul">
-              <li>Ristorante</li>
-              <li>Servizio in camera</li>
+              <li><i class="fa-solid fa-utensils"></i>Ristorante</li>
+              <li>
+                <i class="fa-solid fa-bell-concierge"></i>Servizio in camera
+              </li>
             </ul>
             <!-- Lista servizi obbligatori -->
             <ul class="info_mandatory_ul">
@@ -61,14 +63,18 @@
               <div class="buyout_prices">
                 <div class="big_logo">Expedia</div>
                 <div class="full_price">320 $</div>
-                <div class="discounted_price">302$</div>
-                <div class="small_logo">Expedia</div>
+                <div class="discounted_price">302 $</div>
+                <div class="small_logo">
+                  Expedia<i class="fa-solid fa-arrow-up-right"></i>
+                </div>
               </div>
               <!-- CTA Offer Btn -->
-              <div class="offer_btn"><a href="#">Vedi l'offerta</a></div>
+              <div class="offer_btn_container">
+                <a href="#" class="offer_btn">Vedi l'offerta</a>
+              </div>
             </div>
             <ul class="buyout_features_ul">
-              <li>
+              <li class="text_bold">
                 <span class="check_tic"><i class="fa-solid fa-check"></i></span
                 >Cancellazione gratuita
               </li>
@@ -80,25 +86,31 @@
           </div>
           <!-- Prices Col -->
           <div class="card_col prices_col">
+            <!-- Mobile Col -->
             <div class="mobile_prices_col">
               Abbiamo confrontato i prezzi più bassi da 11 siti
             </div>
+            <!-- Lg Col -->
             <div class="lg_prices_col">
-              <ul>
+              <!-- Ul offerte correlate -->
+              <ul class="lg_prices_ul">
                 <li>
                   <p><a href="#">Booking.com</a></p>
-                  <p>320$</p>
+                  <p class="text_bold text_red">320 $</p>
                 </li>
                 <li>
-                  <p><a href="#">Booking.com</a></p>
-                  <p>320$</p>
+                  <p><a href="#">Hotels.com</a></p>
+                  <p class="text_bold">302 $</p>
                 </li>
                 <li>
-                  <p><a href="#">Booking.com</a></p>
-                  <p>320$</p>
+                  <p><a href="#">Official Hotel</a></p>
+                  <p class="text_bold">304 $</p>
                 </li>
               </ul>
-              <div>Vedi tutte le 11 offerte da 302$</div>
+              <!-- Sezione a tendina offerte -->
+              <div class="lg_more_offer_section text_bold">
+                Vedi tutte le 11 offerte da 302$
+              </div>
             </div>
           </div>
         </div>
